# Moses

./: .gitignore  README.md  pyproject.toml
docs/: commandments.md  language.md  lessons.md  spec.md
docs/commandments/: 01-deep-modules.md  02-loose-coupling.md  03-no-pass-through-methods.md  04-layers-add-abstraction.md  05-pull-complexity-downward.md  06-define-errors-out-of-existence.md  07-comment-where-complexity-demands-it.md  08-strategic-over-tactical.md  09-meaningful-names.md  10-one-name-per-concept.md  11-small-functions.md  12-low-cognitive-complexity.md  13-few-parameters.md  14-shallow-nesting.md  15-command-query-separation.md  16-dry.md  17-no-commented-out-code.md  18-no-empty-catch-blocks.md  19-test-isolation.md  20-mutation-kill-rate.md  21-cohesive-classes.md  22-law-of-demeter.md  23-narrow-variable-scope.md  24-prefer-immutability.md  25-no-magic-numbers.md  26-validate-at-boundaries.md  27-data-over-primitives.md  28-program-to-interfaces.md  29-composition-over-inheritance.md  30-pattern-parsimony.md  31-contain-class-complexity.md
docs/plans/: 2026-06-23-aoc-calibration-corpus-design.md  2026-06-23-aoc-calibration-corpus-plan.md  2026-06-23-c27-data-over-primitives-design.md  2026-06-23-c27-data-over-primitives-plan.md  2026-06-24-rule-params-config-design.md  2026-06-24-rule-params-config-plan.md  2026-06-25-commandments-config-design.md  2026-06-25-commandments-config-plan.md  2026-06-26-overengineering-rules-design.md  2026-06-26-overengineering-rules-plan.md  2026-06-30-loop-tui-design.md  2026-06-30-loop-tui-plan.md  2026-07-01-loop-tui-live-status-design.md  2026-07-01-loop-tui-live-status-plan.md
evals/: analyse_campaign.py  build_per_iter_presentation.py  calibrate.py  corpus_report.py  corpus_score.py
evals/corpus/: calibrated_weights.json  comparison.json  comparison.md  moses_scores.json  splits.json
src/moses/: __init__.py  cli.py  config.py  engine.py  loader.py  loop_runner.py  loop_tui.py  loop_watch.py  models.py  (+1 more)
tests/: conftest.py
(+243 files in other folders)
